# meridian

./: .gitignore  README.md  pyproject.toml
datasets/: example.json  golden_50_template.json
meridian/: __init__.py  embedder.py  models.py  reporter.py  runner.py  sampler.py  scorer.py
meridian/adapters/: base.py
paper/: meridian.tex  references.bib
scripts/: generate_golden_dataset.py
tests/: test_embedder.py  test_models.py  test_reporter.py  test_sampler.py  test_scorer.py
