[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meridian-regression"
version = "0.1.0"
description = "Local, embedding-based LLM model equivalence scoring for migration validation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Vijay Mandavilli", email = "mvijayfromvizag@gmail.com" }
]
keywords = ["llm", "model-migration", "equivalence", "embeddings", "regression-testing", "nlp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "pydantic>=2.0",
  "sentence-transformers>=2.7",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
]

[project.urls]
Repository = "https://github.com/mandavillivijay/meridian"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["meridian"]
